--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
+    "@types/uuid": "^9.0.0",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
@@ -48,8 +49,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/uuid": "^9.0.0"
   }
 }
